tdf#161876 sfx2 store: refuse to overwrite read-only files

Create a read-only file, try to save-as the current document and select
the existing read-only file, accept to overwrite it, works fine.

This is a regression from commit
2157a3536f97ff5ae7c82611a801fef7e3708983 (sfx2 store: try rename before
copying, 2018-01-09), previously such read-only targets were rejected.

Fix the problem by explicitly checking if the target is writable: if
not, then avoid the rename optimization, because the fallback path will
reject the request as expected.

Fix this inside an '#ifdef UNX' block, the problem is reportedly not
there on Windows.

Change-Id: Ifd8798e07a1be504c6747514a53cfc4ff2338a0c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173344
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 63cb8d9ddd6db64e41f66df937f42875637bede5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173395
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>